# TCD1304_CCD_with_STM32H743VIT6

./: .cproject  .mxproject  .project  CUBEMX_NOTES.md  README.md  STM32H743VITX_FLASH.ld  TCD1304_CCD.ioc  TCD1304_SYNC_STRATEGY.md  ccd_oscilloscope.py  imple_plnan.md
Core/Inc/: main.h  stm32h7xx_it.h
Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
USB_DEVICE/App/: usbd_cdc_if.c
ccd_monitor/: README.md  main.py  settings.json
lgplot/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  docs.md  vcpkg.json
lgplot/src/: app_state.cpp  app_state.h  config.h  connection.cpp  connection.h  console.cpp  console.h  main.cpp  ui_panels.cpp  ui_panels.h
other_projects/Audio_Analyser_FW_OS-master/: .cproject  .cproject_org  .mxproject  STM32H743ZITx_FLASH.ld
other_projects/Audio_Analyser_FW_OS-master/Inc/: lwipopts.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
other_projects/Audio_Analyser_FW_OS-master/Src/: ethernetif.c  freertos.c  gpio.c  i2s.c  lwip.c  main.c  stm32h7xx_it.c
other_projects/tcd1304ap-stm32-ccdview-stm32f401retx/: .cproject  .project  README.md  ccdview-retx.ioc
other_projects/tcd1304ap-stm32-ccdview-stm32f401retx/Core/Inc/: consts.h  main.h  stm32f4xx_it.h  timers.h
other_projects/tcd1304ap-stm32-ccdview-stm32f401retx/Core/Src/: main.c  stm32f4xx_it.c  timers.c
recordings/: ccd_recording_20260131_155222.npz
